--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # I have left this file in the project since the MySQL database is local.
-# If you want to connect your own database, you can change the values in this file.
+# If you want to connect your own database, you can change the values in this file, you should hide it from the public.
 
 DB_NAME=php_auth
 DB_HOST=localhost
