Changed filename for stylesheet to follow conventions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "tailwind": "npx tailwindcss -i ./src/view/tailwind.css -o ./public/css/output.css --watch",
+    "tailwind": "npx tailwindcss -i ./src/view/styles.css -o ./public/css/output.css --watch",
     "build": "tsc && npm run minifyjs && npm run minifycss",
     "minifyjs": "terser --compress --mangle --output public/js/validate.js -- public/js/validate.js",
     "minifycss": "npx postcss public/css/output.css -o public/css/output.css"
