FIxed a few file paths due to rename and new showcase image

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # I have left this file in the project since the MySQL database is local.
 # If you want to connect your own database, you can change the values in this file, you should hide it from the public.
 
-DB_NAME=php_auth
+DB_NAME=php-auth
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
